MODBULKOPS-531 Added conditions