@@ -29,6 +29,8 @@ import org.folio.bulkops.exception.BulkOperationException;
 import org.folio.bulkops.exception.RuleValidationException;
 import org.folio.bulkops.processor.MarcDataProcessor;
 import org.folio.bulkops.service.ErrorService;
+import org.folio.bulkops.service.Marc21ReferenceProvider;
+import org.folio.bulkops.service.SubjectReferenceService;
 import org.folio.bulkops.util.MarcDateHelper;
 import org.marc4j.marc.DataField;
 import org.marc4j.marc.Record;
@@ -48,6 +50,8 @@ public class MarcInstanceDataProcessor implements MarcDataProcessor {
 
   private final MarcRulesValidator marcRulesValidator;
   private final ErrorService errorService;
+  private final Marc21ReferenceProvider marc21ReferenceProvider;
+  private final SubjectReferenceService subjectReferenceService;
 
   public void update(BulkOperation operation, Record marcRecord, BulkOperationMarcRuleCollection bulkOperationMarcRuleCollection, Date currentDate) {
     var initialRecord = marcRecord.toString();
@@ -169,11 +173,17 @@ public class MarcInstanceDataProcessor implements MarcDataProcessor {
     char ind2 = fetchIndicatorValue(rule.getInd2());
     var newField = new DataFieldImpl(tag, ind1, ind2);
     var subfieldCode = rule.getSubfield().charAt(0);
-    var value = fetchActionDataValue(VALUE, rule.getActions().get(0).getData());
+    if (marc21ReferenceProvider.isSubjectTag(tag) && !Character.isLetter(subfieldCode) && subfieldCode != '2') {
+      return; // https://folio-org.atlassian.net/browse/MODBULKOPS-531
+    }
+    var value = fetchActionDataValue(VALUE, rule.getActions().getFirst().getData());
+    if (marc21ReferenceProvider.isSubjectTag(tag) && ind2 == '7' && '2' == subfieldCode && !subjectReferenceService.subjectSourceExists(value)) {
+      return; // https://folio-org.atlassian.net/browse/MODBULKOPS-531
+    }
     newField.addSubfield(new SubfieldImpl(subfieldCode, value));
     if (ObjectUtils.isNotEmpty(rule.getSubfields())) {
       for (var subfieldAction : rule.getSubfields()) {
-        var action = subfieldAction.getActions().get(0);
+        var action = subfieldAction.getActions().getFirst();
         if (ADD_TO_EXISTING.equals(action.getName())) {
           subfieldCode = subfieldAction.getSubfield().charAt(0);
           value = fetchActionDataValue(VALUE, action.getData());
